kubernetes/core/argocd/external-dns.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: argocd.cloud.danmanners.com
    # external-dns.alpha.kubernetes.io/alias: "true"
    # external-dns.alpha.kubernetes.io/ingress-hostname-source: annotation-only
    # external-dns.alpha.kubernetes.io/target: unifi-home.homelab.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
  name: argocd-extname
  namespace: argocd
spec:
  externalName: unifi-home.homelab.danmanners.com
  sessionAffinity: None
  type: ExternalName
