kubernetes/core/argocd/ingress-stg.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-stage-gateway
  namespace: argocd
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: "*.capi-core.homelab.danmanners.com"
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    port: 443
    protocol: TLS
    hostname: "*.capi-core.homelab.danmanners.com"
    tls:
      mode: Passthrough
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: argocd-stage
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/hostname: argocd-stg.capi-core.homelab.danmanners.com
spec:
  hostnames:
  - argocd-stg.capi-core.homelab.danmanners.com
  parentRefs:
  - name: argocd-stage-gateway
    kind: Gateway
    group: gateway.networking.k8s.io
    sectionName: https
  rules:
  - name: https
    backendRefs:
    - name: argocd-server
      kind: Service
      group: ""
      port: 443
      weight: 1
