kubernetes/core/argocd/tlsroute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: argocd
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/controller: "false"
    # external-dns.alpha.kubernetes.io/alias: "true"
    # external-dns.alpha.kubernetes.io/hostname: argocd.cloud.danmanners.com
    # external-dns.alpha.kubernetes.io/ingress-hostname-source: annotation-only
    # external-dns.alpha.kubernetes.io/target: unifi-home.homelab.danmanners.com
    # external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  hostnames:
    - argocd.cloud.danmanners.com
  parentRefs:
    - name: gwapi
      namespace: default
      kind: Gateway
      group: gateway.networking.k8s.io
      sectionName: argocd
  rules:
    - name: https
      backendRefs:
        - name: argocd-server
          kind: Service
          group: ""
          port: 443
          weight: 1
